fix: bug-fixes wscontext + ui alignment

--- a/src/components/strips/audioFilters/filterComponents.module.css
+++ b/src/components/strips/audioFilters/filterComponents.module.css
@@ -1,3 +1,3 @@
 .settingsItem {
-  @apply bg-filter-highlited-bg mb-4 w-fit min-w-[30rem] p-5 rounded-lg;
+  @apply bg-filter-highlited-bg mb-4 w-full p-5 rounded-lg;
 }
